--- a/apps/desktop/src/app/connectors/connector/connector.component.html
+++ b/apps/desktop/src/app/connectors/connector/connector.component.html
@@ -1,8 +1,12 @@
-<pa-card [class.selected]="selected"
-         (cardClick)="selectConnector.emit($event)">
-  <div class="connector" (click)="selectConnector.emit($event)">
-    <img [src]="logo" [alt]="title + ' logo'">
-    <div>{{title}}</div>
+<pa-card
+  [class.selected]="selected"
+  (cardClick)="selectConnector.emit($event)">
+  <div
+    class="connector"
+    (click)="selectConnector.emit($event)">
+    <img
+      [src]="logo"
+      [alt]="title + ' logo'" />
+    <div>{{ title }}</div>
   </div>
 </pa-card>
-
