--- a/apps/desktop/src/app/main-layout/main-layout.component.html
+++ b/apps/desktop/src/app/main-layout/main-layout.component.html
@@ -1,7 +1,8 @@
 <nde-topbar></nde-topbar>
 <div class="page-wrapper">
-  <div class="page-content"
-       *ngIf="isLogged">
+  <div
+    class="page-content"
+    *ngIf="isLogged">
     <router-outlet></router-outlet>
   </div>
 </div>
