--- a/apps/desktop/src/app/connectors/folder-upload/folder-upload.component.html
+++ b/apps/desktop/src/app/connectors/folder-upload/folder-upload.component.html
@@ -1,7 +1,10 @@
-<div stfFileDrop
-     class="dropzone"
-     [class.active]="hasFileOver || files.length > 0"
-     (fileOver)="hasFileOver = $event"
-     (atFileDrop)="addFiles($event)">
-  <span>{{ (files.length === 0 ? 'upload.folder.drop' : 'upload.folder.selected') | translate: { num: files.length } }}</span>
+<div
+  stfFileDrop
+  class="dropzone"
+  [class.active]="hasFileOver || files.length > 0"
+  (fileOver)="hasFileOver = $event"
+  (atFileDrop)="addFiles($event)">
+  <span>
+    {{ (files.length === 0 ? 'upload.folder.drop' : 'upload.folder.selected') | translate: { num: files.length } }}
+  </span>
 </div>
