--- a/apps/manager/src/app/account/account-list/account-list.component.html
+++ b/apps/manager/src/app/account/account-list/account-list.component.html
@@ -1,15 +1,30 @@
 <div class="list-wrapper">
-  <div fxLayout="row" fxLayoutAlign="start center">
-    <pa-input fxFlex="80%" (keyup)="applyFilter($event.target.value)" placeholder="Filter">Filter</pa-input>
-    <div fxLayout="row" fxLayoutAlign="center center">
-      <pa-button kind="primary" (click)="addNewAccount()">
+  <div
+    fxLayout="row"
+    fxLayoutAlign="start center">
+    <pa-input
+      fxFlex="80%"
+      (keyup)="applyFilter($event.target.value)"
+      placeholder="Filter">
+      Filter
+    </pa-input>
+    <div
+      fxLayout="row"
+      fxLayoutAlign="center center">
+      <pa-button
+        kind="primary"
+        (click)="addNewAccount()">
         Afegir
       </pa-button>
     </div>
   </div>
 
-  <div class="mat-elevation-z8" class="llistat">
-    <div class="example-loading-shade" *ngIf="isLoadingResults || isRateLimitReached">
+  <div
+    class="mat-elevation-z8"
+    class="llistat">
+    <div
+      class="example-loading-shade"
+      *ngIf="isLoadingResults || isRateLimitReached">
       <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
     </div>
     <table
@@ -18,39 +33,86 @@
       matSort
       matSortActive="created"
       matSortDisableClear
-      matSortDirection="desc"
-    >
+      matSortDirection="desc">
       <!-- ID Column -->
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header>
+          ID
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row">
+          {{ row.id }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header>
+          Title
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row">
+          {{ row.title }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="slug">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Slug</th>
-        <td mat-cell *matCellDef="let row">{{ row.slug }}</td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header>
+          Slug
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row">
+          {{ row.slug }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="type">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
-        <td mat-cell *matCellDef="let row">{{ row.type }}</td>
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header>
+          Type
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row">
+          {{ row.type }}
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-        <td mat-cell *matCellDef="let row" class="actions">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header>
+          Actions
+        </th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          class="actions">
           <mat-icon (click)="delete(row)">delete</mat-icon>
           <mat-icon (click)="edit(row)">edit</mat-icon>
         </td>
       </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr
+        mat-header-row
+        *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
 
     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
