--- a/apps/manager/src/app/dashboard/dashboard.component.html
+++ b/apps/manager/src/app/dashboard/dashboard.component.html
@@ -1,16 +1,33 @@
 <div id="main">
   <mat-toolbar color="primary">
     <mat-toolbar-row>
-      <span class="home" [routerLink]="['/']">Stashify management</span>
+      <span
+        class="home"
+        [routerLink]="['/']">
+        Stashify management
+      </span>
       <span class="toolbar-spacer"></span>
-      <button mat-button [matMenuTriggerFor]="userMenu"  class="user-button">
-        <div fxLayout="row" fxLayoutAlign="center center">
-          <span class="username mr-12 ml-12 h5">{{this.fullname}} ({{this.type}})</span>
-          <mat-icon class="s-16" fxHide.xs>keyboard_arrow_down</mat-icon>
+      <button
+        mat-button
+        [matMenuTriggerFor]="userMenu"
+        class="user-button">
+        <div
+          fxLayout="row"
+          fxLayoutAlign="center center">
+          <span class="username mr-12 ml-12 h5">{{ this.fullname }} ({{ this.type }})</span>
+          <mat-icon
+            class="s-16"
+            fxHide.xs>
+            keyboard_arrow_down
+          </mat-icon>
         </div>
       </button>
-      <mat-menu #userMenu="matMenu" [overlapTrigger]="false">
-        <button mat-menu-item (click)="logout()">
+      <mat-menu
+        #userMenu="matMenu"
+        [overlapTrigger]="false">
+        <button
+          mat-menu-item
+          (click)="logout()">
           <mat-icon>exit_to_app</mat-icon>
           <span>Logout</span>
         </button>
@@ -21,8 +38,11 @@
   </mat-toolbar>
 
   <div class="container">
-      <div id="content" fxLayout="column" fxFlex>
-          <router-outlet #routerOutlet="outlet"></router-outlet>
-      </div>
+    <div
+      id="content"
+      fxLayout="column"
+      fxFlex>
+      <router-outlet #routerOutlet="outlet"></router-outlet>
+    </div>
   </div>
 </div>
