--- a/apps/manager/src/app/dealer/dealer-detail/dealer-detail.component.scss
+++ b/apps/manager/src/app/dealer/dealer-detail/dealer-detail.component.scss
@@ -1,17 +1,19 @@
 .entity {
-    margin: 20px;
-    max-width: 400px;
-    min-width: 300px;
-    padding: 20px;
+  margin: 20px;
+  max-width: 400px;
+  min-width: 300px;
+  padding: 20px;
 
-    textarea, input, mat-form-field {
-        min-width: 250px;
-    }
+  textarea,
+  input,
+  mat-form-field {
+    min-width: 250px;
+  }
 }
 .save-button {
-    padding: 20px;
+  padding: 20px;
 }
 mat-icon {
-    margin-left: 10px;
-    cursor: pointer;
+  margin-left: 10px;
+  cursor: pointer;
 }
