--- a/apps/manager/src/app/users/users-list/users-list.component.html
+++ b/apps/manager/src/app/users/users-list/users-list.component.html
@@ -1,52 +1,122 @@
-<div fxLayout="row" fxLayoutAlign="start center">
-  <stf-input fxFlex="80%" (keyup)="applyFilter($event.target.value)" placeholder="Filter">Filter</stf-input>
-  <div fxLayout="row" fxLayoutAlign="center center">
-    <pa-button kind="primary" fxFlex="20%" (click)="addNewUser()">
+<div
+  fxLayout="row"
+  fxLayoutAlign="start center">
+  <stf-input
+    fxFlex="80%"
+    (keyup)="applyFilter($event.target.value)"
+    placeholder="Filter">
+    Filter
+  </stf-input>
+  <div
+    fxLayout="row"
+    fxLayoutAlign="center center">
+    <pa-button
+      kind="primary"
+      fxFlex="20%"
+      (click)="addNewUser()">
       Afegir
     </pa-button>
   </div>
 </div>
 
 <div class="mat-elevation-z8">
-  <div class="example-loading-shade" *ngIf="isLoadingResults">
+  <div
+    class="example-loading-shade"
+    *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-  <table mat-table [dataSource]="users" matSort matSortActive="created" matSortDisableClear matSortDirection="desc">
+  <table
+    mat-table
+    [dataSource]="users"
+    matSort
+    matSortActive="created"
+    matSortDisableClear
+    matSortDirection="desc">
     <!-- ID Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header>
+        ID
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let row">
+        {{ row.id }}
+      </td>
     </ng-container>
 
     <!-- Progress Column -->
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header>
+        Name
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let row">
+        {{ row.name }}
+      </td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-      <td mat-cell *matCellDef="let row">{{ row.email }}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header>
+        Email
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let row">
+        {{ row.email }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="provider">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Provider</th>
-      <td mat-cell *matCellDef="let row">{{ row.provider }}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header>
+        Provider
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let row">
+        {{ row.provider }}
+      </td>
     </ng-container>
 
     <!-- Color Column -->
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
-      <td mat-cell *matCellDef="let row">
-        <button mat-icon-button aria-label="Go" (click)="go(row)">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header>
+        Actions
+      </th>
+      <td
+        mat-cell
+        *matCellDef="let row">
+        <button
+          mat-icon-button
+          aria-label="Go"
+          (click)="go(row)">
           <mat-icon>keyboard_arrow_right</mat-icon>
         </button>
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
   <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
